Fix header color dark mode

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 /* Variables */
 :root {
     --background-color: #fff;
+    --header-background-color: rgb(250, 250, 250);
     --text-color: #333;
     --text-accent-color: #757575;
     --border-color: #c3c3c3;
@@ -563,7 +564,7 @@ footer {
             margin-top: 0em;
             max-width: 100%;
             text-align: center;
-            background: #fafafa;
+            background: var(--header-background-color);
         }
 
         nav {
@@ -626,6 +627,7 @@ p > code {
 @media (prefers-color-scheme: dark) {
     :root {
         --background-color: rgb(25, 24, 24);
+        --header-background-color: rgb(30, 29, 29);
         --text-color: rgb(192, 192, 192);
         --code-background: rgb(32, 32, 32);
     }
